WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47675
Web Inspector: encapsulate ScriptState into ConsoleMessage instead of passing it as additional parameter
https://bugs.webkit.org/show_bug.cgi?id=47675
Summary
Web Inspector: encapsulate ScriptState into ConsoleMessage instead of passing...
Yury Semikhatsky
Reported
2010-10-14 09:58:04 PDT
Web Inspector: encapsulate ScriptState into ConsoleMessage instead of passing it as additional parameter in InspectorController::addConsoleMessage.
Attachments
Patch
(10.30 KB, patch)
2010-10-14 10:22 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-10-14 10:22:46 PDT
Created
attachment 70748
[details]
Patch
WebKit Commit Bot
Comment 2
2010-10-14 12:53:10 PDT
Comment on
attachment 70748
[details]
Patch Clearing flags on attachment: 70748 Committed
r69799
: <
http://trac.webkit.org/changeset/69799
>
WebKit Commit Bot
Comment 3
2010-10-14 12:53:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug