2010-10-14  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: encapsulate ScriptState into ConsoleMessage instead of passing it as additional parameter
        https://bugs.webkit.org/show_bug.cgi?id=47675

        No new tests. This refactoring is covered by existing inspector tests.

        * bindings/js/JSConsoleCustom.cpp:
        * bindings/js/ScriptCallFrame.cpp:
        * bindings/js/ScriptCallFrame.h:
        (WebCore::ScriptCallFrame::functionName):
        (WebCore::ScriptCallFrame::sourceURL):
        (WebCore::ScriptCallFrame::lineNumber):
        (WebCore::ScriptCallFrame::argumentCount):
        * inspector/ConsoleMessage.cpp:
        (WebCore::ConsoleMessage::isEqual):
        * inspector/ConsoleMessage.h:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::addMessageToConsole):
        (WebCore::InspectorController::addConsoleMessage):
        (WebCore::InspectorController::startGroup):
        (WebCore::InspectorController::endGroup):
        * inspector/InspectorController.h:

Canonical link: https://commits.webkit.org/60385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69799 268f45cc-cd09-0410-ab3c-d52691b4dbfc